<resources>
    <string name="app_name">Messenger</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile_name">Martin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string-array name="pref_languages_list">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string-array name="pref_languages_list_values">
        <item>rus</item>
        <item>eng</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="welcome_to_messenger">Welcome to Messenger</string>
    <string name="first_page_message">It\'s just first page. \n\n Skip it!)</string>
    <string name="ok">Ok!)</string>
    <string name="about_messenger">About messenger</string>
    <string name="about_page_message">Just messenger</string>
    <string name="About">About</string>
    <string name="Settings">Settings</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="contacts">Contacts</string>
    <string name="messages">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_search_by_date">Search By date</string>
    <string name="application_language">Application language</string>
    <string name="user_email">user_email</string>
    <string name="accept_action">Accept action</string>
    <string name="accept_add_new_contact">accept adding new contact?</string>
    <string name="background_chat_color">background_chat_color</string>
    <string name="pref_header_decor">Decoration</string>
    <string name="text_chat_color">text_chat_color</string>
    <string name="background_messages_color">background_messages_color</string>
    <string name="text_messages_color">text_messages_color</string>
    <string name="background_contacts_color">background_contacts_color</string>
    <string name="text_contacts_color">text_contacts_color</string>
    <string name="user_first_name">first name</string>
    <string name="pref_title_profile_first_name">Set first name</string>
    <string name="user_last_name">last name</string>
    <string name="pref_title_profile_last_name">Set last name</string>
    <string name="pref_title_profile_email">Set email</string>
    <string name="user_nickname">nickname</string>
    <string name="pref_title_profile_nickname">Set nickname</string>
    <string name="user_password">password</string>
    <string name="pref_title_profile_password">Set password</string>
    <string name="pref_header_profile">Profile</string>
    <string name="pref_description_avatar_contact_switch">Switch view avatar in contacts</string>
    <string name="pref_title_avatar_contact_switch">View avatar in contacts</string>
    <string name="pref_description_avatar_messages_switch">Switch view avatar in messages</string>
    <string name="pref_title_avatar_messages_switch">View avatar in messages</string>
    <string name="pref_description_synchronise_switch">Switch syncronise</string>
    <string name="pref_title_synchronise_switch">Synchronise</string>
    <string name="pref_title_new_message_notifications_popup">Popup notification</string>
    <string name="input_new_contact_name">Input new contact name</string>
    <string name="name">Name</string>
    <string name="profile_email">123@mail.ru</string>
</resources>
