<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#036e64"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:padding="16dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_messenger"
        android:textColor="#ddd"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_title"
        android:text="@string/about_page_message"
        android:textColor="#ddd"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAboutOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:background="#3b978d"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/ok"
        android:textColor="#fff" />
</RelativeLayout>

</RelativeLayout>