<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:id="@+id/chatBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_new_contact"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_horizontal"
        android:paddingTop="@dimen/material_drawer_padding"
        android:text="@string/input_new_contact_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/newContactEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="bottom|center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingTop="@dimen/material_drawer_padding" />

    <Button
        android:id="@+id/btnCreateNewContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|bottom|center_horizontal|center"
        android:text="@string/ok" />
</LinearLayout>